Bug 24566 - properly _ref authority in singleton constructor
Summary: properly _ref authority in singleton constructor
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-16 01:41 UTC by Alexander Sack
Modified: 2009-10-16 07:01 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
_ref authority in _get (841 bytes, patch)
2009-10-16 01:41 UTC, Alexander Sack
Details | Splinter Review

Description Alexander Sack 2009-10-16 01:41:28 UTC
Created attachment 30474 [details] [review]
_ref authority in _get

we got a bunch of NM crashes that seem to be due to i polkit not reffing the authority in _get ... attached an mbox patch that fixes this.
Comment 1 Alexander Sack 2009-10-16 01:51:08 UTC
Launchpad NM crash bug:

https://bugs.edge.launchpad.net/ubuntu/+source/policykit-1/+bug/438574
Comment 2 Martin Pitt 2009-10-16 04:38:16 UTC
This makes sense, since http://hal.freedesktop.org/docs/polkit/polkit-1-polkitauthority.html#polkit-authority-get says that the object must be unrefed when done with it.
Comment 3 David Zeuthen (not reading bugmail) 2009-10-16 07:01:48 UTC
Yeah, dcbw has been bugging me about this. Thanks for the patch. Committed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.