Bug 24566 – Properly _ref authority in singleton constructor

http://bugs.freedesktop.org/show_bug.cgi?id=24566

Signed-off-by: David Zeuthen <davidz@redhat.com>